src/objects/KPI_IntermediateComputation__c.object
<CustomObject>
    <fields>
        <fullName>IdentifierParam__c</fullName>
        <label>IdentifierParam</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_MappingScope__c</fullName>
        <label>KPI_MappingScope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI_IntermediateComputations</relationshipLabel>
        <relationshipName>KPI_IntermediateComputations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>KPI_IntermediateComputation</label>
    <nameField>
        <displayFormat>KI-{0000}</displayFormat>
        <label>KPI_IntermediateComputation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI_IntermediateComputations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>